syntax = "proto3";

package model.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";
import "../../../model/model/v1alpha/common.proto";

// DetectionObject represents an identified object in an image.
message DetectionObject {
  // Category.
  string category = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  // Score.
  float score = 2 [(google.api.field_behavior) = OUTPUT_ONLY];
  // Bounding box.
  BoundingBox bounding_box = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// DetectionInput represents the input of an object detection task.
message DetectionInput {
  // Content of the input.
  oneof type {
    // Image URL.
    string image_url = 1;
    // Base64-encoded image.
    string image_base64 = 2;
  }
}

// DetectionInputStream represents the input of an object detection task when
// the input is streamed as binary files.
message DetectionInputStream {
  // File length for each uploaded binary file.
  repeated uint32 file_lengths = 1 [(google.api.field_behavior) = REQUIRED];
  // Byte representation of the images.
  bytes content = 2 [(google.api.field_behavior) = REQUIRED];
}

// DetectionOutput contains the result of an object detection task.
message DetectionOutput {
  // A list of detected objects.
  repeated DetectionObject objects = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}
