syntax = "proto3";

package model.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

// TextGenerationInput represents the input of text generation task
message TextGenerationInput {
  // The prompt text
  string prompt = 1 [(google.api.field_behavior) = REQUIRED];
  // The Prompt Image, only for multimodal input
  oneof type {
    // Image type URL
    string prompt_image_url = 2;
    // Image type base64
    string prompt_image_base64 = 3;
  };
  // The maximum number of tokens for model to generate
  optional int32 max_new_tokens = 4 [(google.api.field_behavior) = OPTIONAL];
  // The trigger words to stop generation
  optional string stop_words_list = 5 [(google.api.field_behavior) = OPTIONAL];
  // The temperature for sampling
  optional float temperature = 6 [(google.api.field_behavior) = OPTIONAL];
  // Top k for sampling
  optional int32 top_k = 7 [(google.api.field_behavior) = OPTIONAL];
  // The seed
  optional int32 seed = 8 [(google.api.field_behavior) = OPTIONAL];
  // The extra parameters
  optional string extra_params = 9 [(google.api.field_behavior) = OPTIONAL];
}

// TextGenerationOutput represents the output of text generation task
message TextGenerationOutput {
  // The text generated by the model
  string text = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
