syntax = "proto3";

package model.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";
import "../../../model/model/v1alpha/common.proto";

// TextGenerationChatInput represents the input of text generation chat task
message TextGenerationChatInput {
  // The prompt text
  repeated ConversationObject conversation = 1 [(google.api.field_behavior) = REQUIRED];
  // The maximum number of tokens for model to generate
  optional int32 max_new_tokens = 2 [(google.api.field_behavior) = OPTIONAL];
  // The temperature for sampling
  optional float temperature = 3 [(google.api.field_behavior) = OPTIONAL];
  // Top k for sampling
  optional int32 top_k = 4 [(google.api.field_behavior) = OPTIONAL];
  // The seed
  optional int32 seed = 5 [(google.api.field_behavior) = OPTIONAL];
  // The extra parameters
  repeated ExtraParamObject extra_params = 6 [(google.api.field_behavior) = OPTIONAL];
}

// TextGenerationChatOutput represents the output of text generation chat task
message TextGenerationChatOutput {
  // The text generated by the model
  string text = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}
