syntax = "proto3";

package model.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

// TextToImageInput represents the input of text to image task
message TextToImageInput {
  // The prompt text
  string prompt = 1 [ (google.api.field_behavior) = REQUIRED ];
  // The Prompt Image, only for multimodal input
  oneof type {
    // Image type URL
    string prompt_image_url = 2;
    // Image type base64
    string prompt_image_base64 = 3;
  };
  // The steps, default is 5
  optional int64 steps = 4 [ (google.api.field_behavior) = OPTIONAL ];
  // The guidance scale, default is 7.5
  optional float cfg_scale = 5 [ (google.api.field_behavior) = OPTIONAL ];
  // The seed, default is 0
  optional int64 seed = 6 [ (google.api.field_behavior) = OPTIONAL ];
  // The number of generated samples, default is 1
  optional int64 samples = 7 [ (google.api.field_behavior) = OPTIONAL ];
  // The extra parameters
  optional string extra_params = 8 [(google.api.field_behavior) = OPTIONAL];
}

// TextToImageOutput represents the output of text to image task
message TextToImageOutput {
  // List of generated images
  repeated string images = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
