syntax = "proto3";

package vdp.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

import "./common.proto";

// Keypoint structure which include coordinate and keypoint visibility
message Keypoint {
  // x coordinate
  float x = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // y coordinate
  float y = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // visibility
  float v = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// KeypointObject corresponding to a person object
message KeypointObject {
  // Keypoints
  repeated Keypoint keypoints = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Keypoint score
  float score = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Bounding box object
  BoundingBox bounding_box = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// KeypointInput represents the input of keypoint detection task
message KeypointInput {
  // Input type
  oneof type {
    // Image type URL
    string image_url = 1;
    // Image type base64
    string image_base64 = 2;
  }
}

// KeypointOutput represents the output of keypoint detection task
message KeypointOutput {
  // A list of keypoint objects
  repeated KeypointObject objects = 1
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
